--- a/Views/components/footer.html
+++ b/Views/components/footer.html
@@ -1,5 +1,5 @@
 <nav class="navbar fixed-bottom bg-light">
-  <div class="container-flluid">
-    <h5>ALL Rights Reserved. COMP2112. &copy; Copyright 2022.</h5>
-  </div>
+    <div class="container-fluid">
+        <h5>All Rights Reserved. COMP2112. &copy; Copyright 2022.</h5>
+    </div>
 </nav>
